--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "env-cmd": "^10.1.0",
+    "formik": "^2.2.9",
     "i18n": "^0.14.2",
     "i18next": "^21.6.15",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.5",
+    "react-query": "^3.34.19",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
