--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
+    "git-cz": "^4.8.0",
     "i18n": "^0.14.2",
     "i18next": "^21.6.15",
+    "json-server": "^0.17.0",
+    "jwt-decode": "^3.1.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
