--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.34.19",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
+    "workbox-streams": "^6.5.3",
     "yup": "^0.32.11"
   },
   "scripts": {
