--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.5",
     "react-query": "^3.34.19",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
     "workbox-streams": "^6.5.3",
