--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.7",
